--- a/notebooks/1-getting_started_with_pandas.ipynb
+++ b/notebooks/1-getting_started_with_pandas.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c8c4e00d-8bbb-47ee-9c84-dba7b6c19636",
    "metadata": {
     "tags": []
@@ -173,7 +173,7 @@
        "4  01/01/1902 12:00:00 AM -33.16667  -64.95000   (-33.16667, -64.95)  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "e9481da8-a3b5-4f6e-b9fc-cdb049090dbe",
    "metadata": {
     "tags": []
@@ -225,7 +225,7 @@
        "Name: name, dtype: object"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "2b8723c5-3e4d-4038-82c7-5c0e9651f01c",
    "metadata": {
     "tags": []
@@ -263,7 +263,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "43a06370-f735-4a9d-a64f-493e03b2b2c7",
    "metadata": {
     "tags": []
@@ -299,7 +299,7 @@
        "RangeIndex(start=0, stop=5, step=1)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "96da3638-773f-4a4a-a766-b5f34da67f80",
    "metadata": {},
    "outputs": [],
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "45bf1785-4f25-461b-b600-543ccb0fccff",
    "metadata": {
     "tags": []
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "be644eb4-193e-4820-9855-3e959c899319",
    "metadata": {},
    "outputs": [
@@ -520,7 +520,7 @@
        "2                         NaN                         NaN  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "d968d99d-dbf8-4402-a556-4200e13afe72",
    "metadata": {},
    "outputs": [
@@ -597,7 +597,7 @@
        "(45716, 10)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "24045c3d-085f-485d-b5a7-422037b24272",
    "metadata": {},
    "outputs": [
@@ -633,7 +633,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "408c70cc-f900-45d2-828d-827ba6dd4123",
    "metadata": {},
    "outputs": [
@@ -677,7 +677,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "3de2f605-ca0a-4e5e-9add-76309296adf5",
    "metadata": {},
    "outputs": [
@@ -824,7 +824,7 @@
        "4  01/01/1902 12:00:00 AM -33.16667  -64.95000   (-33.16667, -64.95)  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "3b7f694d-c34c-4042-a051-07dc8759a11c",
    "metadata": {
     "tags": []
@@ -973,7 +973,7 @@
        "45715  01/01/1976 12:00:00 AM  33.98333 -115.68333  (33.98333, -115.68333)  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "acbaa48e-0ebc-4412-b5ff-bded4f43e806",
    "metadata": {},
    "outputs": [
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "317e4c45-7afe-425f-a7a2-cad55f20a91e",
    "metadata": {},
    "outputs": [],
@@ -1050,7 +1050,9 @@
     "# Click on `Exercise 1.1` above to open the workbook.ipynb file\n",
     "\n",
     "# WARNING: if you complete the exercise here, your cell numbers\n",
-    "# for the rest of the training might not match the slides"
+    "# for the rest of the training might not match the slides\n",
+    "\n",
+    "# DONE"
    ]
   },
   {
@@ -1065,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "ceab7259-c412-4f8b-b0be-e3cc801836b0",
    "metadata": {},
    "outputs": [],
@@ -1074,7 +1076,9 @@
     "# Click on `Exercise 1.2` above to open the workbook.ipynb file\n",
     "\n",
     "# WARNING: if you complete the exercise here, your cell numbers\n",
-    "# for the rest of the training might not match the slides"
+    "# for the rest of the training might not match the slides\n",
+    "\n",
+    "# 10,000 rows x 18 cols"
    ]
   },
   {
@@ -2348,7 +2352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "f0297d45-1d86-411f-ad8e-74cfaa3b2389",
    "metadata": {},
    "outputs": [
@@ -2561,7 +2565,7 @@
        "max                        NaN     81.166670    354.473330         NaN  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2606,7 +2610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "876cafcb-00ab-4f5a-8b3c-bfead4f0b14c",
    "metadata": {},
    "outputs": [],
@@ -2627,7 +2631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "6402bb24-3da9-48e5-bde1-0b8a9576f00d",
    "metadata": {},
    "outputs": [],
@@ -2661,7 +2665,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
